--- a/ocr/ocr.ipynb
+++ b/ocr/ocr.ipynb
@@ -177,7 +177,7 @@
    "metadata": {},
    "source": [
     "### [로컬 환경] 사용 예시\n",
-    "- [HuggingFace](https://huggingface.co/google/gemma-3-1b-it)에서 Gemma, SigLIP2를 다운로드해야 하므로, acess token이 필요합니다.\n",
+    "- HuggingFace에서 Gemma, SigLIP2를 다운로드해야 하므로, acess token이 필요합니다.\n",
     "\n",
     "- ```token```의 값을 HuggingFace Access Token으로 설정해 주세요.\n",
     "\n",
